--- a/.travis.yml
+++ b/.travis.yml
@@ -44,4 +44,4 @@ install:
     - conda info -a
 
 script:
-    - cd test &&  nosetests --verbose --nocapture
+    - cd test &&  nosetests --verbose --nocapture test_system-test_rules.py
